--- a/src/mqttclient/Win2Mqtt.Client.csproj
+++ b/src/mqttclient/Win2Mqtt.Client.csproj
@@ -14,7 +14,7 @@
     <SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="description.txt" />
+    <Content Include="README.md" />
     <Content Include="mqtticon-large_400x400.ico" />
   </ItemGroup>
 
@@ -25,8 +25,10 @@
   <ItemGroup>
 
     <PackageReference Include="Autofac">
-      <Version>4.9.4</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
+
+    <PackageReference Include="AutofacSerilogIntegration" Version="5.0.0" />
 
     <PackageReference Include="CommunityToolkit.WinUI.Notifications" Version="7.1.2" />
     <PackageReference Include="M2Mqtt">
@@ -37,6 +39,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.4" />
