--- a/src/Win10MqttLibrary/Win2Mqtt.Common.csproj
+++ b/src/Win10MqttLibrary/Win2Mqtt.Common.csproj
@@ -1,9 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.18362.0</TargetFramework>
+	  <SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
     <OutputType>Library</OutputType>
     <RootNamespace>Win2Mqtt</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	  <LanguageVersion>latest</LanguageVersion>
+	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
@@ -11,6 +14,5 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
 </Project>
