--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -12,14 +12,13 @@
             "Username": "",
             "Password":  ""
         },
-        "MqttTopic": "win2mqtt",
-        "TimerInterval": 2,
+        "MqttTopic": "win2mqtt/lechuck",
+        "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
             "CpuSensor": true,
             "FreeMemorySensor": true,
             "IsComputerUsed": true,
-            "BatterySensor": false,
             "DiskSensor": true,
             "NetworkSensor": true
         }
