--- a/src/Win2Mqtt.Service/Win2Mqtt.Service.csproj
+++ b/src/Win2Mqtt.Service/Win2Mqtt.Service.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CliWrap" Version="3.6.7" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
 	<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
