--- a/src/Win2Mqtt.Infra/Win2Mqtt.Infra.csproj
+++ b/src/Win2Mqtt.Infra/Win2Mqtt.Infra.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -16,5 +16,9 @@
 		<PackageReference Include="MQTTnet" Version="5.0.1.1416" />
 		<PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.1" />
 
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Mqtt\" />
 	</ItemGroup>
 </Project>
