--- a/src/Win2Mqtt.Service/Win2Mqtt.Service.csproj
+++ b/src/Win2Mqtt.Service/Win2Mqtt.Service.csproj
@@ -24,7 +24,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Win10MqttLibrary\Win2Mqtt.Common.csproj" />
-        <ProjectReference Include="..\Win2Mqtt.Broker.Mqtt2Net\Win2Mqtt.Broker.Mqtt2Net.csproj" />
+        <ProjectReference Include="..\Win2Mqtt.Broker.Mqtt2Net\Win2Mqtt.Broker.MQTTNet.csproj" />
         <ProjectReference Include="..\Win2Mqtt.HomeAssistant\Win2Mqtt.HomeAssistant.csproj" />
         <ProjectReference Include="..\Win2Mqtt.Infra\Win2Mqtt.System.Metrics.csproj" />
         <ProjectReference Include="..\Win2Mqtt.System.Actions\Win2Mqtt.System.Actions.csproj" />
