--- a/src/Win2Mqtt.Service/Properties/launchSettings.json
+++ b/src/Win2Mqtt.Service/Properties/launchSettings.json
@@ -1,12 +1,12 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "Win2Mqtt.Service": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true
     }
-  }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json"
 }
