--- a/src/Win2Mqtt.Service/appsettings.Development.json
+++ b/src/Win2Mqtt.Service/appsettings.Development.json
@@ -5,8 +5,7 @@
         },
         "WriteTo": [
             {
-                "Name": "Seq",
-                "Args": { "serverUrl": "http://localhost:5341" }
+                "Name": "Console"
             }
         ]
     }
