--- a/src/Win2Mqtt.Application/Win2Mqtt.Application.csproj
+++ b/src/Win2Mqtt.Application/Win2Mqtt.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
     <ProjectReference Include="..\Win2Mqtt.Broker.Mqtt2Net\Win2Mqtt.Broker.MQTTNet.csproj" />
     <ProjectReference Include="..\Win2Mqtt.HomeAssistant\Win2Mqtt.HomeAssistant.csproj" />
