--- a/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
+++ b/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <OutputType>Library</OutputType>
-        <LanguageVersion>latest</LanguageVersion>
-        <RootNamespace>Win2Mqtt</RootNamespace>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<OutputType>Library</OutputType>
+		<LanguageVersion>latest</LanguageVersion>
+		<RootNamespace>Win2Mqtt</RootNamespace>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
+
+	</ItemGroup>
 </Project>
